tests/expectations/compiler/core/algorithms/integers/bhp256/bhp256_hash_to_i16.out
<<<<<<< HEAD
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:22
     |
  28 |         let a: i16 = BHP256::hash_to_i16(addr_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:22
     |
  29 |         let b: i16 = BHP256::hash_to_i16(bool_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:22
     |
  30 |         let c: i16 = BHP256::hash_to_i16(field_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:22
     |
  31 |         let d: i16 = BHP256::hash_to_i16(group_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:22
     |
  32 |         let e: i16 = BHP256::hash_to_i16(i8_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:22
     |
  33 |         let f: i16 = BHP256::hash_to_i16(i16_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:22
     |
  34 |         let g: i16 = BHP256::hash_to_i16(i32_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:22
     |
  35 |         let h: i16 = BHP256::hash_to_i16(i64_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:22
     |
  36 |         let i: i16 = BHP256::hash_to_i16(i128_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:22
     |
  37 |         let j: i16 = BHP256::hash_to_i16(u8_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:22
     |
  38 |         let k: i16 = BHP256::hash_to_i16(u16_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:22
     |
  39 |         let l: i16 = BHP256::hash_to_i16(u32_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:22
     |
  40 |         let m: i16 = BHP256::hash_to_i16(u64_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:22
     |
  41 |         let n: i16 = BHP256::hash_to_i16(u128_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:22
     |
  42 |         let o: i16 = BHP256::hash_to_i16(scalar_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:22
     |
  44 |         let q: i16 = BHP256::hash_to_i16(Foo { a: 1u128, b: 1u128 });
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
=======
program test.aleo;

function main:
    input r0 as i8.private;
    input r1 as i16.private;
    input r2 as i32.private;
    input r3 as i64.private;
    input r4 as u8.private;
    input r5 as u16.private;
    input r6 as u32.private;
    input r7 as u64.private;
    hash.bhp256 aleo10qerras5799u6k7rjtc9y3hcwxuykr45qra7x7dp6jgnc0923czqm0lgta into r8 as i16;
    hash.bhp256 true into r9 as i16;
    hash.bhp256 1field into r10 as i16;
    hash.bhp256 1540945439182663264862696551825005342995406165131907382295858612069623286213group into r11 as i16;
    hash.bhp256 r0 into r12 as i16;
    hash.bhp256 r1 into r13 as i16;
    hash.bhp256 r2 into r14 as i16;
    hash.bhp256 r3 into r15 as i16;
    hash.bhp256 1i128 into r16 as i16;
    hash.bhp256 r4 into r17 as i16;
    hash.bhp256 r5 into r18 as i16;
    hash.bhp256 r6 into r19 as i16;
    hash.bhp256 r7 into r20 as i16;
    hash.bhp256 1u128 into r21 as i16;
    hash.bhp256 1scalar into r22 as i16;
    output r8 as i16.private;
    output r9 as i16.private;
    output r10 as i16.private;
    output r11 as i16.private;
    output r12 as i16.private;
    output r13 as i16.private;
    output r14 as i16.private;
    output r15 as i16.private;
    output r16 as i16.private;
    output r17 as i16.private;
    output r18 as i16.private;
    output r19 as i16.private;
    output r20 as i16.private;
    output r21 as i16.private;
    output r22 as i16.private;
    output -2828i16 as i16.private;
>>>>>>> mainnet
